--- a/Portfolio/css/contactMeStyle.css
+++ b/Portfolio/css/contactMeStyle.css
@@ -1,33 +1,77 @@
-*{
-    background-color: lightgray;
-    text-transform: uppercase;
-    text-align: justify;
+nav{
+    display: flex;
+    justify-content:center;
 }
 
-p{
-    color: black;
-   
-    text-transform: uppercase;
-    font-size: 30px;
-    text-decoration: underline;
-
-}
-.f1{
-    text-transform: uppercase;
-    font-size: 20px;
-}
-#test{
-    text-transform: uppercase;
-    font-size: 20px;
-    text-decoration: underline;
-}
-.f2{
-    text
+nav li{
+    list-style: none; 
+    display: inline;  
+    /* removes bullets points
+    makes the items stack in line */
 }
 
-li {
-    list-style: none;
-    display: inline;
-    color:black;
-    text-transform: uppercase;
+form{
+    margin:  10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+form label{
+    width: 120px;
+    /* color:darkgray; */
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.box{
+    padding: 5px 0px 5px;
+    display: flex;
+    flex-wrap:wrap ;
+    align-items: center;
+}
+.box label{
+    display: flex;
+    align-items: flex-start;
+    text-align: right;
+}
+
+.radio{
+     padding: 5px 0px 5px;
+    display: flex;
+    flex-wrap:wrap ;
+    align-items: center;
+}
+.radio input{
+    text-align: center;
+}
+
+.services{
+     padding: 5px 0px 5px;
+    display: flex;
+    flex-wrap:wrap ;
+    align-items: center;
+}
+.booking{
+    padding: 5px 0px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.reg input{
+    width: 200px;
+}
+#sbm,
+#rst{
+    margin-top: 5px;
+    padding: 10px;
+    border-width: 2px;
+}
+
+#sbm:hover,
+#rst:hover{
+    color: blue;
 }
